# robotic_manipulator_6_dof

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: ros2_controllers.yaml
launch/: controller.launch.py  display.launch.py  gazebo_launch.py  robot_state_publisher_launch.py
src/nodes/: arm_poses.cpp  pose_goal_commander.cpp
urdf/: camera.urdf.xacro  gripper.urdf.xacro  robot.urdf  robot.urdf.xacro  robot2.urdf.xacro
