<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotic_manipulator_6_dof</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rohitjangra7370@gmail.com">olympusforge</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>angles</depend>
  <depend>control_toolbox</depend>
  <depend>yaml_cpp_vendor</depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2_control_node</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>gz_ros2_control</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
